--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,33 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+ol,
+li {
+  text-decoration: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+a {
+  text-decoration: none;
+  font-style: normal;
+}
+img {
+  max-width: 100%;
+  display: block;
+  height: auto;
+}
+button {
+  cursor: pointer;
+}
